# drone-detection-mlops

./: .gcloudignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  cloudbuild-api.yaml  cloudbuild-train.yaml  docker-compose.yaml  makefile  pyproject.toml  tasks.py  test_ruff.py
.claude/: settings.local.json
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: build.yaml  check-branch-updated.yaml  data-change.yaml  deploy.yaml  linting.yaml  tests.yaml
cloud/: cloudbuild-frontend.yaml  cloudrun-api.yaml
cloud/ignore_configs/: .gcloudignore-api  .gcloudignore-frontend  .gcloudignore-train
configs/: config.yaml
configs/hyper_parameters/: param_1.yaml  param_2.yaml
configs/sweep/: basic.yaml
data/: .dockerignore  .gitignore  bird.dvc  drone.dvc
data/splits/: test_files.txt  train_files.txt  val_files.txt
dockerfiles/: README.md  api.dockerfile  frontend.dockerfile  train.dockerfile
docs/: mkdocs.yaml
docs/source/: index.md
frontend/: README.md  package-lock.json  package.json
frontend/src/routes/: +layout.svelte  +page.svelte  layout.css
scripts/: submit_training.py
src/drone_detector_mlops/: model.py  settings.py  train.py
src/drone_detector_mlops/api/: README.md  inference.py  main.py
src/drone_detector_mlops/data/: create_splits.py  data.py  stats.py  transforms.py
src/drone_detector_mlops/permissions/: cloud_members.txt  setup_permissions.sh  setup_service_accounts.sh
src/drone_detector_mlops/utils/: logger.py  settings.py  storage.py
src/drone_detector_mlops/workflows/: test.py  testing.py  train.py  training.py
tests/: README.md  test_api.py  test_data.py  test_model.py  test_utils.py  test_workflows.py
tests/load/: README.md  locustfile.py
