[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "drone_detector_mlops"
version = "0.0.1"
description = "A drone detection framework with extra MLOps sauce"
authors = [
  { name = "dtu-mlops", email = "your@email.com" },
]
license = { file = "LICENSE" }
keywords = ["machine learning", "MLOps"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dvc[gs]>=3.65.0",
    "fastapi>=0.115.6",
    "gcsfs>=2025.12.0",
    "google-cloud-aiplatform>=1.133.0",
    "google-cloud-storage>=3.7.0",
    "kaggle>=1.8.3",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "onnx>=1.20.1",
    "onnxruntime>=1.23.2",
    "onnxscript>=0.5.7",
    "pillow>=12.1.0",
    "python-multipart>=0.0.21",
    "scikit-learn>=1.8.0",
    "timm>=1.0.23",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "typer[all]>=0.15.1",
    "uvicorn>=0.34.0",
    "wandb>=0.23.1",
]

[dependency-groups]
dev = [
    "coverage>=7.6.9",
    "invoke>=2.2.0",
    "mkdocs-material>=9.4.6",
    "mkdocs>=1.6.1",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.5.3",
    "mkdocstrings-python>=1.12.2",
    "ipython>=9.8.0",
    "jupyter>=1.1.1",
    "prek==0.2.27",
    "locust>=2.43.1",
]

[tool.ruff]
line-length = 120
fix = true

[tool.coverage.run]
omit = ["tests/*", "/private/var/*", "/tmp/*"]

[project.scripts]
train = "drone_detector_mlops.workflows.train:app"
test = "drone_detector_mlops.workflows.test:app"

[tool.pytest.ini_options]
filterwarnings = [
    "ignore::pytest.PytestCollectionWarning",
]
